compiler/testData/checkerWithErrorTypes/quick/regression/SpecififcityByReceiver.jet
fun Any.equals(other : Any?) : Boolean = true

fun main(args: Array<String>) {

    val command : Any = 1

    command<!UNNECESSARY_SAFE_CALL!>?.<!>equals(null)
    command.equals(null)
}